@@ -525,6 +525,7 @@ TESTS+=	tests/ci.test \
 TESTS+=	tests/explain_+i-c.test \
 	tests/explain_0f_v-02.test \
 	tests/explain_0f_v-c.test \
+	tests/explain_a0i.test \
 	tests/explain_a4f_i.test \
 	tests/explain_a4v.test \
 	tests/explain_a5fd_i.test \
