@@ -1,0 +1,3 @@
+explain int a[0]
+            ^
+13: error: array size must be greater than 0
